Chinese name: KaiTi bold larger; fix nav tab spacing consistency

--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -47,7 +47,6 @@
   white-space: nowrap;
 
   &--lg {
-    padding-right: 2em;
     font-weight: 700;
   }
 }
