--- a/_sass/_navigation.scss
+++ b/_sass/_navigation.scss
@@ -210,10 +210,6 @@
 
       &:first-child {
         font-weight: bold;
-
-        a {
-          margin-left: 0;
-        }
       }
 
       &:last-child {
